# cs-phd-agent

./: .env.example  README.md  __init__.py  analyzer.py  models.py  pyproject.toml  report.py
cs_phd_agent/: cli.py  config.py  main.py  researcher.py  resume_parser.py
templates/: report.md.j2
